<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Note</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_hint">在此输入标题</string>
    <string name="content_hint">在此输入笔记</string>
    <string name="save">✔</string>
    <string name="other">┇</string>
    <string name="note_name">个人笔记</string>
    <string name="update_tag">修改标签</string>
    <string name="add_new_tag">添加新标签</string>
    <string name="add">添加</string>
    <string name="my_tag">我的标签</string>
    <string name="search_note">搜索笔记</string>
    <string name="imagebutton">ImageButton</string>
    <string name="order">排序</string>
    <string name="options">查看选项</string>
    <string name="by_modify_time">按修改时间</string>
    <string name="by_create_time">按创建时间</string>
    <string name="by_title">按标题</string>
    <string name="by_local_time">按本地访问时间</string>
    <string name="cancel">取消</string>
    <string name="OK">确定</string>
    <string name="summary">摘要</string>

</resources>
