<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/note_top_edit_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#1C86EE"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/new_save"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="#1C86EE"
            android:text="@string/save" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/new_other"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="#1C86EE"
            android:text="@string/other" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/new_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/title_hint"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/new_tag"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#FFFFFF"
            android:contentDescription="@string/imagebutton"
            android:src="@drawable/tag_empty" />
    </LinearLayout>

    <EditText
        android:id="@+id/new_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/content_hint"
        android:textSize="30sp" />

</LinearLayout>