<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="15dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options"
        android:textColor="#000000"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/dialog_options_bysummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="150dp"
        android:layout_marginTop="10dp"
        android:text="@string/summary"
        android:textColor="#000000" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/dialog_options_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="35dp"
            android:background="#FFFFFF"
            android:text="@string/cancel"
            android:textColor="#008B00" />

        <Button
            android:id="@+id/dialog_options_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:text="@string/OK"
            android:textColor="#008B00" />
    </LinearLayout>

</LinearLayout>