<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#1C86EE"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/tag_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#1C86EE"
            android:contentDescription="@string/imagebutton"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/tag_menuname"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/update_tag"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/tag_save"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#1C86EE"
            android:text="@string/save"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/tag_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/add_new_tag" />

        <Button
            android:id="@+id/tag_add"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:background="#4169E1"
            android:text="@string/add"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#DDDDDD" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/my_tag" />

        <TextView
            android:id="@+id/tag_myTag"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="#1C86EE"
            android:gravity="center_vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/tag_delete"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="#1C86EE"
            android:contentDescription="@string/imagebutton"
            android:paddingRight="4dp"
            android:src="@drawable/delete"
            android:visibility="invisible" />
    </LinearLayout>

    <ListView
        android:id="@+id/tag_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>