<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/edit_save"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="#BFBFBF"
            android:text="@string/save" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/edit_other"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="#BFBFBF"
            android:text="@string/other" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/content_hint"
        android:textSize="30sp" />

</LinearLayout>